--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\bzs\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "c:\\Users\\bzs\\Documents\\Python Scripts\\test1\\excel\\Scripts\\python.exe"
 }
